# crucible

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
course/: 01-state-of-ai-development.md  02-vibe-coding-anatomy.md  03-multi-agent-theory.md  04-first-agent-team.md  05-debate-council-pattern.md  06-code-quality-ai-era.md  07-predictive-analysis.md  08-agent-society.md  09-open-source-strategy.md  10-developers-evolving-role.md  README.md
crucible/: __init__.py  __main__.py
crucible/agents/: __init__.py  course_builder.py  debate_council.py  forecaster.py  learning.py  pattern_analyst.py  publisher.py  research.py  scanner.py  visualizer.py
crucible/core/: __init__.py  agent.py  events.py  orchestrator.py  state.py
crucible/debate/: __init__.py  personas.py  protocol.py  resolver.py
crucible/memory/: __init__.py  migrations.py  sqlite_store.py  store.py
crucible/plugins/: hooks.py  (+4 more)
docs/: ROADMAP.md  STUDY_OVERVIEW.md  launch-playbook.md
examples/: analyze_projects.py  streaming_debate.py
personas/: devil_advocate.yaml  economist.yaml  minimalist.yaml  pragmatist.yaml  security_auditor.yaml  skeptic.yaml  user_advocate.yaml  visionary.yaml
tests/: test_composer.py  test_debate_council.py  test_learning.py  test_orchestrator.py  test_personas.py  test_plugins.py  test_replay.py  test_scanner.py  test_search.py  test_society.py  test_sqlite_store.py  test_state.py  test_streaming.py  test_templates.py  test_versioning.py  test_web.py
(+124 files in other folders)
