[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucible"
version = "0.1.0"
description = "A multi-agent research framework with adversarial debate councils"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Crucible Contributors" }]
keywords = ["multi-agent", "ai", "research", "debate", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.30.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[project.scripts]
crucible = "crucible.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["crucible"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
strict = true
